--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,13 @@
   "devDependencies": {
     "angular-mocks": "^1.2.x"
   },
-  "ignore": []
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "spec",
+    "example",
+    "Gruntfile.js",
+    "karma.conf.js"
+  ]
 }
